RetailDevGit/src/objects/ARM_Question__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object</description>
    <fields>
        <fullName>Answer_Options__c</fullName>
        <defaultValue>&quot;YES, NO&quot;</defaultValue>
        <description>Options for picklist question types</description>
        <inlineHelpText>Enter comma separated values that should show as options in the picklist</inlineHelpText>
        <label>Answer Options</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conditional_Answer_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conditional Answer Brand</label>
        <referenceTo>ARM_Brand__c</referenceTo>
        <relationshipLabel>Survey Question (Conditional Answer Brand)</relationshipLabel>
        <relationshipName>Survey_Question1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditional_Answer__c</fullName>
        <description>If this question is related to a parent question, this is the answer that will lead to this question being displayed in the survey.</description>
        <inlineHelpText>If this question is related to a parent question, this is the answer that will lead to this question being displayed in the survey.</inlineHelpText>
        <label>Conditional Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, and a survey result answers with a No, then a case will be created.</inlineHelpText>
        <label>Create Case ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Brand</label>
        <referenceTo>ARM_Brand__c</referenceTo>
        <relationshipLabel>ARM Survey Question</relationshipLabel>
        <relationshipName>ARM_Survey_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <label>Goal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Point of Distribution</fullName>
                </value>
                <value>
                    <fullName>Shelf Sets</fullName>
                </value>
                <value>
                    <fullName>Cold Box</fullName>
                </value>
                <value>
                    <fullName>Ad Execution</fullName>
                </value>
                <value>
                    <fullName>QD / Volume</fullName>
                </value>
                <value>
                    <fullName>Menu</fullName>
                </value>
                <value>
                    <fullName>Sampling</fullName>
                </value>
                <value>
                    <fullName>Staff Training</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Vendor Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_None_of_the_Above__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Picklists and Multi-Select picklists, we want an option to add &apos;None of the Above&apos; to the list where appropriate</description>
        <inlineHelpText>Include if you want the user to have the option to select None of the Above</inlineHelpText>
        <label>Include &apos;None of the Above&apos;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Photos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Goal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_for_Add_l_Comments__c</fullName>
        <description>If we are going to capture additional comments for this question, then this is the label that should be displayed above the comments textarea.</description>
        <inlineHelpText>If we are going to capture additional comments for this question, then this is the label that should be displayed above the comments textarea.</inlineHelpText>
        <label>Label for Add&apos;l Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>ID used for upserts with relationships for data being loaded from another org</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Goal_Score__c</fullName>
        <description>Max goal score total</description>
        <label>Max Goal Score</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <description>The max possible score for this question.  Single-select picklist will be the MAX value of all of the answer options and multi-select picklist will be the SUM of all of the answer scores.</description>
        <inlineHelpText>The max possible score for this question.  Single-select picklist will be the MAX value of all of the answer options and multi-select picklist will be the SUM of all of the answer scores.</inlineHelpText>
        <label>Max Score</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The next question in the screen flow if there are no conditional questions OR if all conditional questions are complete.</description>
        <label>NEXT Question</label>
        <referenceTo>ARM_Question__c</referenceTo>
        <relationshipLabel>Previous Questions</relationshipLabel>
        <relationshipName>Follows_these_questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Conditional questions have a PARENT question.   The parent question is answered and if the answer matches, then this child question is asked.</description>
        <inlineHelpText>Conditional questions have a PARENT question.   The parent question is answered and if the answer matches, then this child question is asked.</inlineHelpText>
        <label>Parent Question</label>
        <referenceTo>ARM_Question__c</referenceTo>
        <relationshipLabel>Conditional Questions</relationshipLabel>
        <relationshipName>ARM_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>The nested number of the question</description>
        <label>Question Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Multi-Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Photos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>Survey header object</description>
        <inlineHelpText>Survey header object</inlineHelpText>
        <label>Survey</label>
        <referenceTo>ARM_Survey__c</referenceTo>
        <relationshipName>ARM_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Question_ID__c</fullName>
        <description>18 digits DD Survey Question ID</description>
        <formula>casesafeid(Id)</formula>
        <label>18 Digit Question ID</label>
        <type>Text</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARM Survey Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>